Maybe fixed setting visibility

--- a/css/style.css
+++ b/css/style.css
@@ -17,5 +17,5 @@
 
 /* used in explorer.html */
 #rightColumn {
-    visibility: hidden !important;
+    visibility: hidden;
 }
